--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
 
-.city{
-	text-align: center;
+.weather-conditions{
+	text-transform: capitalize;
+}
+#get-weather{
+	cursor: pointer;
 }
